# jira-bot

./: .gitignore  Cargo.toml
src/: main.rs
src/apis/: github.rs  jira.rs  mod.rs  openai.rs  requests.rs
src/github/: github.rs
src/interface/: app.rs  input.rs  mod.rs  ui.rs
src/jira/: jira.rs
