[package]
name = "gh-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
ratatui = "0.29.0"
crossterm = "0.28.1"
textwrap = "0.16.2"
